used code folding for cleaner display

--- a/notebooks/2019 Week1 NHL Attendance/@idatadrew.ipynb
+++ b/notebooks/2019 Week1 NHL Attendance/@idatadrew.ipynb
@@ -26,6 +26,7 @@
     "from PIL import Image\n",
     "\n",
     "import seaborn as sns\n",
+    "import matplotlib\n",
     "import matplotlib.pylab as plt\n",
     "pd.options.mode.chained_assignment = None #surpress is copy warning"
    ]
@@ -57,55 +58,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TEAM\n",
-      "Anaheim         17\n",
-      "Arizona         17\n",
-      "Boston          17\n",
-      "Buffalo         17\n",
-      "Calgary         17\n",
-      "Carolina        17\n",
-      "Chicago         17\n",
-      "Colorado        17\n",
-      "Columbus        17\n",
-      "Dallas          17\n",
-      "Detroit         17\n",
-      "Edmonton        17\n",
-      "Florida         17\n",
-      "Los Angeles     17\n",
-      "Minnesota       17\n",
-      "Montreal        17\n",
-      "NY Islanders    17\n",
-      "NY Rangers      17\n",
-      "Nashville       17\n",
-      "New Jersey      17\n",
-      "Ottawa          17\n",
-      "Philadelphia    17\n",
-      "Pittsburgh      17\n",
-      "San Jose        17\n",
-      "St. Louis       17\n",
-      "Tampa Bay       17\n",
-      "Toronto         17\n",
-      "Vancouver       17\n",
-      "Washington      17\n",
-      "Winnipeg        17\n",
-      "Name: SEASON, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = df.query('TEAM != \"Vegas\"')\n",
-    "print(df.groupby('TEAM')['SEASON'].count())"
+    "#print(df.groupby('TEAM')['SEASON'].count())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0,
+     7,
+     12
+    ]
+   },
    "outputs": [],
    "source": [
     "def clean_numeric_column(df, column_name):\n",
@@ -130,9 +98,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [],
    "source": [
+    "#Create piviot table\n",
     "data = df[['TEAM', 'SEASON', ' TOTAL ATTENDANCE ', 'TOTAL GAMES']]\n",
     "data = clean_numeric_column(data, ' TOTAL ATTENDANCE ')\n",
     "\n",
@@ -160,7 +133,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -244,53 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {
     "code_folding": [
      0,
+     10,
      15
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "def draw_colorbar(header_ax, fig):\n",
-       "    colorbar_ax = fig.add_axes([0.73, 0.74, 0.125, 0.1]) # right, up\n",
-       "    colorbar_im = colorbar_ax.imshow(piviot_table, cmap=cmap, aspect=0.125)\n",
-       "    colorbar = fig.colorbar(colorbar_im, cax=colorbar_ax, orientation='horizontal', ticks=[0])\n",
-       "    colorbar_ax.tick_params(axis=\"x\", direction='inout', length=5,)\n",
-       "    colorbar.ax.set_xticklabels([''])\n",
-       "    \n",
-       "    colorbar_ax.annotate(str(min_change) + '%', xy=(1, 1), xytext=(-36, -7), fontsize=16, color='#666666')\n",
-       "    colorbar_ax.annotate(str(max_change) + '%', xy=(1, 1), xytext=(30.5, -7), fontsize=16, color='#666666')\n",
-       "\n",
-       "def draw_header(header_ax, fig):\n",
-       "    header_ax.annotate('What is the % Change in average attendance per game for NHL teams compared to the 2000-01 season?', \n",
-       "    xy=(1, 1), xytext=(-0.095, 0.80), size=20.5, color='#666666', weight='bold'\n",
-       "    )\n",
-       "\n",
-       "    header_ax.annotate('Average attendance per game has steadily increased compared to the 2000-01\\n'\n",
-       "                       + 'season for most teams. The Chicago Blackhawks have seen the most postive % change\\n'\n",
-       "                       + 'whereas the Colorado Avalanche have seen the most negative % change', \n",
-       "                       xy=(1, 1), xytext=(-0.025, 0.15), size=18, color='#666666'\n",
-       "    )\n",
-       "\n",
-       "    header_image = Image.open('./HockeyPlayer.PNG')\n",
-       "    header_image = np.array(header_image).astype(np.float) / 255\n",
-       "    fig.figimage(header_image, 0, 852, zorder=1)\n",
-       "\n",
-       "    header_ax.axis('off')\n",
-       "    draw_colorbar(header_ax, fig)\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Latex object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def draw_colorbar(header_ax, fig):\n",
     "    colorbar_ax = fig.add_axes([0.73, 0.74, 0.125, 0.1]) # right, up\n",
@@ -323,9 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
@@ -333,6 +274,14 @@
      "output_type": "stream",
      "text": [
       "-19.6 28.9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:28: MatplotlibDeprecationWarning: \n",
+      "The text.latex.unicode rcparam was deprecated in Matplotlib 3.0 and will be removed in 3.2.\n"
      ]
     },
     {
@@ -375,6 +324,10 @@
     "heatmap_ax.set_xlabel(\"Season (2000's)\", size=17, color='#666666', labelpad=20)\n",
     "heatmap_ax.xaxis.set_label_position('top')\n",
     "\n",
+    "matplotlib.rcParams['text.usetex'] = True\n",
+    "matplotlib.rcParams['text.latex.unicode'] = True\n",
+    "#heatmap_ax.annotate(r'\\textbf{time} (s)', xy=(1, 1), xytext=(2.5, 32))\n",
+    "\n",
     "#Print Graph\n",
     "plt.show()\n",
     "#cm.savefig('myfigure.png')"
@@ -395,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
