create custom color map

--- a/notebooks/Examples/Multicolored Text Example.ipynb
+++ b/notebooks/Examples/Multicolored Text Example.ipynb
@@ -54,7 +54,7 @@
        "\\includegraphics[width=1.0\\textwidth]{multicolored_text_example.pdf}"
       ],
       "text/plain": [
-       "<__main__.PDF at 0x7f837d270fd0>"
+       "<__main__.PDF at 0x7f0cec4106d8>"
       ]
      },
      "execution_count": 2,
@@ -96,7 +96,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f837ca17198>"
+       "<IPython.lib.display.IFrame at 0x7f0cec463e80>"
       ]
      },
      "execution_count": 3,
