moved into containing folder

--- a/notebooks/2019 Week1 NHL Attendance/Heatmap/@idatadrew.ipynb
+++ b/notebooks/2019 Week1 NHL Attendance/Heatmap/@idatadrew.ipynb
@@ -59,7 +59,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./NHL Attendance.csv')\n",
+    "df = pd.read_csv('../NHL Attendance.csv')\n",
     "df.columns"
    ]
   },
