--- a/notebooks/2019 Week1 NHL Attendance/Heatmap/Heatmap.ipynb
+++ b/notebooks/2019 Week1 NHL Attendance/Heatmap/Heatmap.ipynb
@@ -300,7 +300,7 @@
     "heatmap_ax.set_xlabel(\"Season (2000's)\", size=17, color='#666666', labelpad=20)\n",
     "heatmap_ax.xaxis.set_label_position('top');\n",
     "\n",
-    "file_name = 'idatadrew.pdf'\n",
+    "file_name = 'Week1_NHL_Heatmap.pdf'\n",
     "plt.savefig(file_name)\n",
     "matplotlib.pyplot.close(fig) #do not draw"
    ]
