--- a/notebooks/2019 Week1 NHL Attendance/Team Dashboard/Team Dashboard.ipynb
+++ b/notebooks/2019 Week1 NHL Attendance/Team Dashboard/Team Dashboard.ipynb
@@ -413,7 +413,7 @@
     "\n",
     "\n",
     "#Save and show pdf\n",
-    "file_name = 'team_dashboard.pdf'\n",
+    "file_name = 'Week1_NHL_Team_Dashboard.pdf'\n",
     "plt.savefig(file_name)\n",
     "matplotlib.pyplot.close(fig) #do not draw\n",
     "show_pdf(file_name)"
